syntax = "proto3";
package auth;
option go_package = "auth.v1;auth";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc RefreshToken(RefreshRequest) returns (AuthResponse);

  rpc ValidateToken(ValidateRequest) returns (TokenInfo);
  rpc IntrospectToken(ValidateRequest) returns (TokenIntrospection);
  rpc CheckPermission(PermissionCheckRequest) returns (PermissionCheckResponse);

  rpc ListActiveSessions(SessionFilter) returns (SessionList);
  rpc TerminateSession(SessionID) returns (google.protobuf.Empty);
}

message LoginRequest {
  string client_id = 1;
  int32 app_id = 2;
  string login = 3;
  string password = 4;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
  UserInfo user = 4;
  TokenMetadata metadata = 5;
}

message UserInfo {
  string id = 1;
  string email = 2;
  string full_name = 3;
  bool is_active = 4;
  repeated string roles = 5;
  repeated string permissions = 6;
}

message TokenMetadata {
  string client_id = 1;
  int32 app_id = 2;
  string token_type = 3;
  string issuer = 4;
  repeated string audiences = 5;
}

message RefreshRequest {
  string refresh_token = 1;
  string client_id = 2;
  int32 app_id = 3;
}

message ValidateRequest {
  string token = 1;
  string token_type_hint = 2;
}

message TokenInfo {
  bool active = 1;
  string client_id = 2;
  string user_id = 3;
  google.protobuf.Timestamp exp = 4;
  google.protobuf.Timestamp iat = 5;
  string scope = 6;
}

message TokenIntrospection {
  bool active = 1;
  string client_id = 2;
  string user_id = 3;
  string token_type = 4;
  google.protobuf.Timestamp exp = 5;
  google.protobuf.Timestamp iat = 6;
  repeated string roles = 7;
  repeated string permissions = 8;
  map<string, string> metadata = 9;
}

message PermissionCheckRequest {
  string user_id = 1;
  string client_id = 2;
  int32 app_id = 3;
  string permission = 4;
  string resource = 5;
}

message PermissionCheckResponse {
  bool allowed = 1;
  repeated string missing_roles = 2;
  repeated string missing_permissions = 3;
}

message SessionFilter {
  string user_id = 1;
  string client_id = 2;
  int32 app_id = 3;
  bool active_only = 4;
}

message Session {
  string session_id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp last_activity = 3;
  string client_id = 4;
  string ip_address = 5;
  string user_agent = 6;
}

message SessionList {
  repeated Session sessions = 1;
}

message SessionID {
  string session_id = 1;
}

message LogoutRequest {
  string access_token = 1;
  string refresh_token = 2;
}